gcc/testsuite/algol68/compile/error-radix-1.a68
(bits a = 2r03; skip) { dg-error "" }
